<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Task</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="installUI">安装</string>
    <string name="installNoUI">静默安装</string>
    <string name="uninstallUI">卸载</string>
    <string name="uninstallNoUI">静默卸载</string>
    <string name="send">发送</string>
    <string name="packages">所有包信息</string>
</resources>