<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_install_ui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/installUI" />

        <Button
            android:id="@+id/btn_install_no_ui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/installNoUI" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_uninstall_ui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uninstallUI" />

        <Button
            android:id="@+id/btn_uninstall_no_ui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uninstallNoUI" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send" />
    </LinearLayout>

</LinearLayout>